CHANGES IN VERSION 1.1.3
-----------------------

NEW FEATURES

    o Populate annotations
    

CHANGES IN VERSION 1.1.2
-----------------------

NEW FEATURES

    o Populate annotations
    
    o Fix bugs in the functions 'xEnrichConciser' and 'xEnrichForest'

    o Modify functions ('xEnricher', 'xEnricherGenes', 'xEnricherSNPs', 'xEnricherYours', 'xEnricherGenesAdv', 'xGRviaGeneAnno' and 'xGRviaGeneAnnoAdv') enabling the control of, adding 'background.annotatable.only', how to use the test background 

    o Add functions ('xGR2xGeneAnno' and 'xGR2xGeneAnnoAdv') supporting genomic region-based enrichment analysis using the crosslinked gene annotations
    
    o Add a new function 'xEnrichTreemap' for visualising enrichment results in a treemap
    
    o Add a new function 'xCrosstalk' for active pathway crosstalk identification
    
    o Add new functions ('xGRsort', 'xGRsep' and 'xGRcse') for genomic range operations

    o Add a new function 'xEnrichLadder' for ladder-like plot of enrichment results


CHANGES IN VERSION 1.1.1
-----------------------

NEW FEATURES

    o Modify functions ('xEnricher', 'xEnricherGenes', 'xEnricherSNPs', 'xEnricherYours', 'xGRviaGenomicAnno') enabling two-side p-value calculation and inclusion of odds ratio (confidence intervals)

    o Add a new function 'xEnricherGenesAdv' for conducting enrichment analysis given a list of gene sets and a list of ontologies
    
    o Add a new function 'xGRviaGeneAnnoAdv' for conducting enrichment analysis given a list of genomic region sets and a list of ontologies
    
    o Add a new function 'xEnrichForest' for visualising enrichment results in a forest plot

    o Add a new function 'xVisInterpAnimate' for animating irregular data interpolation and visualisation
    
    o Modify 'xDAGpropagate' allowing for keeping all children
    
    o Modify 'xSNP2nGenes' and 'xSNP2GeneScores' allowing for inclusion of a TAD dataset to pre-filter SNP-nGene pairs
    