@@ -2,7 +2,7 @@ Package: XGR
 Type: Package
 Title: Exploring Genomic Relations for Enhanced Interpretation Through Enrichment, Similarity, Network and Annotation Analysis
 Version: 1.1.3
-Date: 2018-3-26
+Date: 2018-3-27
 Author: Hai Fang, Bogdan Knezevic, Katie L Burnham, Julian C Knight
 Maintainer: Hai Fang <hfang@well.ox.ac.uk>
 Depends: R (>= 3.1.0), igraph, dnet, ggplot2
@@ -99,5 +99,6 @@ Collate:
     'xGRcse.r'
     'xEnrichLadder.r'
     'xHEB.r'
+    'xEnrichHeatmap.r'
 License: GPL-2
 biocViews: Bioinformatics
