@@ -28,6 +28,7 @@ export(xEnrichConciser)
 export(xEnrichDAGplot)
 export(xEnrichDAGplotAdv)
 export(xEnrichForest)
+export(xEnrichHeatmap)
 export(xEnrichLadder)
 export(xEnrichMatrix)
 export(xEnrichNetplot)
