@@ -10,52 +10,42 @@
 <h3>Description</h3>
 
 <p><code>xEnrichHeatmap</code> is supposed to visualise enrichment results using
-heatmap in which rows for terms and columns for its members. It returns
-an object of class &quot;ggplot&quot;.
+heatmap. It returns an object of class &quot;ggplot&quot;.
 </p>
 
 
 <h3>Usage</h3>
 
 <pre>
-xEnrichHeatmap(eTerm, sortBy = c("or", "adjp", "fdr", "pvalue",
-"zscore",
-"fc", "nAnno", "nOverlap", "none"), top_num = 10, FDR.cutoff = 0.05,
-CI.one = T, colormap = "skyblue-darkblue", verbose = T)
+xEnrichHeatmap(list_eTerm, fdr.cutoff = 0.05, displayBy = c("zscore",
+"fdr",
+"pvalue", "fc", "or"), colormap = NULL, zlim = NULL, reorder =
+c("none",
+"row", "col", "both"))
 </pre>
 
 
 <h3>Arguments</h3>
 
 <table summary="R argblock">
-<tr valign="top"><td><code>eTerm</code></td>
+<tr valign="top"><td><code>list_eTerm</code></td>
 <td>
-<p>an object of class &quot;eTerm&quot;</p>
+<p>an object of class &quot;ls_eTerm&quot;. Alterntively, it can
+be a data frame having all these columns (named as
+'group','ontology','name','adjp') and one of these columns
+(&quot;zscore&quot;,&quot;fdr&quot;,&quot;pvalue&quot;,&quot;fc&quot;,&quot;or&quot;)</p>
 </td></tr>
-<tr valign="top"><td><code>sortBy</code></td>
-<td>
-<p>which statistics will be used for sorting and viewing
-gene sets (terms). It can be &quot;adjp&quot; or &quot;fdr&quot; for adjusted p value
-(FDR), &quot;pvalue&quot; for p value, &quot;zscore&quot; for enrichment z-score, &quot;fc&quot; for
-enrichment fold change, &quot;nAnno&quot; for the number of sets (terms),
-&quot;nOverlap&quot; for the number in overlaps, &quot;or&quot; for the odds ratio, and
-&quot;none&quot; for ordering according to ID of terms</p>
-</td></tr>
-<tr valign="top"><td><code>top_num</code></td>
-<td>
-<p>the number of the top terms (sorted according to FDR or
-adjusted p-values). If it is 'auto', only the significant terms (see
-below FDR.cutoff) will be displayed</p>
-</td></tr>
-<tr valign="top"><td><code>FDR.cutoff</code></td>
+<tr valign="top"><td><code>fdr.cutoff</code></td>
 <td>
 <p>FDR cutoff used to declare the significant terms. By
 default, it is set to 0.05</p>
 </td></tr>
-<tr valign="top"><td><code>CI.one</code></td>
+<tr valign="top"><td><code>displayBy</code></td>
 <td>
-<p>logical to indicate whether to allow the inclusion of one
-in CI. By default, it is TURE (allowed)</p>
+<p>which statistics will be used for comparison. It can
+be &quot;fc&quot; for enrichment fold change (by default), &quot;adjp&quot; for adjusted p
+value (or FDR), &quot;pvalue&quot; for p value, &quot;zscore&quot; for enrichment z-score,
+&quot;or&quot; for enrichment odd ratio</p>
 </td></tr>
 <tr valign="top"><td><code>colormap</code></td>
 <td>
@@ -70,10 +60,17 @@ hyphen-separated HTML color names, e.g. &quot;blue-black-yellow&quot;,
 standard color names can be found in
 <a href="http://html-color-codes.info/color-names">http://html-color-codes.info/color-names</a></p>
 </td></tr>
-<tr valign="top"><td><code>verbose</code></td>
+<tr valign="top"><td><code>zlim</code></td>
 <td>
-<p>logical to indicate whether the messages will be
-displayed in the screen</p>
+<p>the minimum and maximum z values for which colors should be
+plotted, defaulting to the range of the -log10(FDR)</p>
+</td></tr>
+<tr valign="top"><td><code>reorder</code></td>
+<td>
+<p>how to reorder rows and columns. It can be &quot;none&quot; for no
+reordering, &quot;row&quot; for reordering rows according to number of sharings
+(by default), &quot;col&quot; for reordering columns, and &quot;both&quot; for reordering
+rows and columns</p>
 </td></tr>
 </table>
 
@@ -92,7 +89,7 @@ displayed in the screen</p>
 
 <h3>See Also</h3>
 
-<p><code>xEnrichViewer</code>, <code>xHeatmap</code>
+<p><code>xHeatmap</code>
 </p>
 
 
@@ -100,32 +97,27 @@ displayed in the screen</p>
 
 <pre>
 ## Not run: 
-# Load the XGR package and specify the location of built-in data
+# Load the library
 library(XGR)
 RData.location &lt;- "http://galahad.well.ox.ac.uk/bigdata_dev/"
 
-data(Haploid_regulators)
-## only IRF1 positive regulators
-data &lt;- subset(Haploid_regulators, Phenotype=='IRF1' &amp;
-MI&lt;0)[,c('Gene')]
+# provide the input Genes of interest (eg 100 randomly chosen human genes)
+## load human genes
+org.Hs.eg &lt;- xRDataLoader(RData='org.Hs.eg',
+RData.location=RData.location)
+set.seed(825)
+data &lt;- as.character(sample(org.Hs.eg$gene_info$Symbol, 100))
+data
 
-# 1) KEGGenvironmental
-eTerm &lt;- xEnricherGenes(data, ontology="KEGGenvironmental",
-size.range=c(10,2000), min.overlap=5, RData.location=RData.location)
-gp_heatmap &lt;- xEnrichHeatmap(eTerm)
+# optionally, provide the test background (if not provided, all human genes)
+#background &lt;- as.character(org.Hs.eg$gene_info$Symbol)
 
-# 2) PSG
-eTerm &lt;- xEnricherGenes(data, ontology="PSG", size.range=c(1,20000),
-min.overlap=0, RData.location=RData.location)
-gp_heatmap &lt;- xEnrichHeatmap(eTerm, sortBy="none", top_num="auto",
-FDR.cutoff=1)
-
-# 3) save into the file "xEnrichHeatmap.pdf"
-mat &lt;- xSparseMatrix(gp_heatmap$data)
-pdf("xEnrichHeatmap.pdf", width=2+ncol(mat)*0.075,
-height=2+nrow(mat)*0.1, compress=T)
-print(gp_heatmap)
-dev.off()
+# 2) Gene-based enrichment analysis using ontologies (REACTOME and GOMF)
+# perform enrichment analysis
+ls_eTerm &lt;- xEnricherGenesAdv(data, ontologies=c("REACTOME","GOMF"),
+RData.location=RData.location)
+## heatmap plot of enrichment results
+gp &lt;- xEnrichHeatmap(ls_eTerm, fdr.cutoff=0.1, displayBy="zscore")
 
 ## End(Not run)
 </pre>
